# pyside6-manager

./: .gitignore  .qmllint.ini  README.md  pyproject.toml
docs/FluentUI/: AdvancedExamples.md  App.md  Buttons.md  DataVisualization.md  DialogsAndNotifications.md  InputControls.md  LayoutControls.md  README.md  TextStyle.md  UtilityComponents.md
docs/FluentUI/01_Core/: Theme.md
docs/QML_Basics/: README.md
docs/QML_Basics/01_Core_Concepts/: DataTypes.md  JavaScript_Integration.md  Properties_Bindings.md  README.md  Signals_Slots.md
docs/QML_Basics/02_Basic_Elements/: BorderImage.md  Image.md  Item.md  README.md  Rectangle.md  Text.md
docs/QML_Basics/03_Layouts/: ColumnLayout.md  GridLayout.md  README.md  RowLayout.md  StackLayout.md
docs/QML_Basics/04_Input_Handling/: Drag.md  DropArea.md  Flickable.md  Focus.md  Keys.md  MouseArea.md  MultiPointTouchArea.md  PinchArea.md  README.md
docs/QML_Basics/05_QtQuick_Controls/: AbstractButton.md  BusyIndicator.md  Button.md  CheckBox.md  ComboBox.md  Dial.md  Frame.md  GroupBox.md  Label.md  PageIndicator.md  ProgressBar.md  README.md  RadioButton.md  RangeSlider.md  ScrollBar.md  ScrollIndicator.md  Slider.md  SpinBox.md  SplitView.md  Switch.md  TextArea.md  TextField.md  ToolTip.md  Tumbler.md
docs/QML_Basics/06_Views_Models/: Delegate.md  GridView.md  ListModel.md  ListView.md  PathView.md  README.md  TableView.md
docs/QML_Basics/07_Windows_Dialogs/: ApplicationWindow.md  ColorDialog.md  Dialog.md  FileDialog.md  FontDialog.md  Menu.md  MessageDialog.md  Popup.md  README.md  Window.md
docs/QML_Basics/08_States_Transitions_Animations/: Animation.md  Behavior.md  README.md  State.md  Transition.md
docs/QML_Basics/09_Advanced_Topics/: Component.md  Loader.md  README.md  WorkerScript.md
example/: AppInfo.py  main.py
example/FluentUI/full/: __init__.py  full.qmltypes  main.py  qmldir  settings.ini
example/docs/: component_CircularReveal.md  helper_SettingsHelper.md
example/fluent_ui/: AppInfo.py  example.qmltypes  main.py  main.qml  qmldir
example/fluent_ui/component/: OpenGLItem.py  component.qmltypes  qmldir
example/fluent_ui/docs/: component_FileWatcher.md  component_FpsItem.md  helper_InitializrHelper.md
example/fluent_ui_demo/: AppInfo.py  __init__.py  example_zh_CN.qm  fluent_ui_demo.qmltypes  main.py  qmldir
example/helper/: InitializrHelper.py  SettingsHelper.py  TranslateHelper.py
src/pyside6_manager/: __init__.py
(+52 files in other folders)
