[project]
name = "pyside6-manager"
version = "0.1.0"
description = "Manage PySide6 projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6~=6.8.3",
    "pillow>=10.4.0",
    "keyboard>=0.13.5",
    "qrcode>=7.4.2",
    "pyside6-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyside6_manager"]

[tool.uv.sources]
pyside6-stubs = { path = "../PySide6-stubs" }

[tool.pyright]
typeCheckingMode = "strict"
exclude = [".venv/**", "**/*_rc.py"]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "ruff>=0.11.6",
]
