[project]
name = "pyside6-manager"
version = "0.1.0"
description = "Manage PySide6 projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6~=6.8.3",
    "pillow>=11.0.0",
    "qrcode~=7.4.2",
    "pyside6-stubs",
    "qasync>=0.27.1",
    "aiohttp>=3.11.18",
    "pyopengl>=3.1.9",
    "py7zr>=0.22.0",
    "pydantic>=2.11.3",
    "click>=8.1.8",
]

[project.scripts]
pyside6-manager = "pyside6_manager.cli:cli"
psm = "pyside6_manager.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyside6_manager"]

[tool.uv.sources]
pyside6-stubs = { path = "../PySide6-stubs" }

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
exclude = [".venv/**", "**/*_rc.py", "example"]


[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "ruff>=0.11.6",
]
